[gd_scene load_steps=29 format=3 uid="uid://xuqduhuov5eq"]

[ext_resource type="PackedScene" uid="uid://4tpwkqip551a" path="res://scenes/global_elements/elements/table.tscn" id="1_aq4hh"]
[ext_resource type="Script" path="res://scenes/modules/module1/sprints/them_ho_khau.gd" id="1_khktl"]
[ext_resource type="Texture2D" uid="uid://cu3wmppuq54me" path="res://assets/sprites/ui/bg_white.png" id="2_2xb7k"]
[ext_resource type="Theme" uid="uid://b0f85lxjcftcx" path="res://assets/resources/themes/theme_popup.tres" id="3_np6te"]
[ext_resource type="Theme" uid="uid://brdiy7ttotod7" path="res://assets/resources/themes/theme_button.tres" id="4_kxf73"]
[ext_resource type="Texture2D" uid="uid://i311ycl1lowb" path="res://assets/sprites/ui/buttons/edit.png" id="5_r75hr"]
[ext_resource type="Texture2D" uid="uid://7njktnl60vll" path="res://assets/sprites/ui/buttons/save.png" id="6_0yvow"]
[ext_resource type="Theme" uid="uid://cvxiiwjwnm8g" path="res://assets/resources/themes/theme_field.tres" id="7_mq46t"]
[ext_resource type="Theme" uid="uid://cpltx4lyxm334" path="res://assets/resources/themes/theme_textinput.tres" id="8_s7w6w"]
[ext_resource type="Theme" uid="uid://6qdjft62ndn3" path="res://assets/resources/themes/theme_option.tres" id="10_5vvv7"]
[ext_resource type="Texture2D" uid="uid://c6mgn5a4hwcu2" path="res://assets/sprites/ui/buttons/insert.png" id="10_xyfva"]
[ext_resource type="Texture2D" uid="uid://dib2b4ivnvl4u" path="res://assets/sprites/ui/buttons/reload_white.png" id="11_ogsmo"]
[ext_resource type="Texture2D" uid="uid://ugcbgupx7cya" path="res://assets/sprites/ui/buttons/open.png" id="12_li6jy"]
[ext_resource type="Texture2D" uid="uid://ctqy0hrjjmicj" path="res://assets/sprites/ui/buttons/import.png" id="13_dnav0"]
[ext_resource type="Texture2D" uid="uid://c5n8m08ivk1gs" path="res://assets/sprites/ui/buttons/delete.png" id="14_mldby"]
[ext_resource type="Texture2D" uid="uid://bklhwn6i50nru" path="res://assets/sprites/ui/buttons/delete_all.png" id="15_og115"]
[ext_resource type="Texture2D" uid="uid://rvipcqnl28du" path="res://assets/sprites/ui/buttons/submenu_normal.png" id="16_ntd16"]
[ext_resource type="Theme" uid="uid://dakp5dsaw7jvf" path="res://assets/resources/themes/theme_danh_sach.tres" id="18_sv5ni"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onryy"]
bg_color = Color(0, 0.466667, 0.74902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b4gmp"]
bg_color = Color(0, 0.380392, 0.611765, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojekh"]
bg_color = Color(0, 0.294118, 0.482353, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvkkl"]
bg_color = Color(0, 0.304688, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hoijd"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxmw4"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0rjq"]
bg_color = Color(0, 0.466667, 0.74902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p88x3"]
bg_color = Color(0, 0.380392, 0.611765, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8x1sh"]
bg_color = Color(0, 0.294118, 0.482353, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7pnl"]
bg_color = Color(0, 0.304688, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ThemHoKhau" type="VBoxContainer"]
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_khktl")

[node name="BgWhite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(5, 2.78125)
texture = ExtResource("2_2xb7k")
centered = false

[node name="Popup" type="Node2D" parent="."]

[node name="PopupMenu" type="PopupMenu" parent="Popup"]
title = "Warning!"
initial_position = 1
size = Vector2i(320, 160)
unresizable = false
borderless = false
always_on_top = true
theme = ExtResource("3_np6te")
hide_on_item_selection = false
item_count = 1
item_0/text = "sdasdas"
item_0/id = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Popup"]
title = "Xác nhận"
initial_position = 1
size = Vector2i(320, 160)
always_on_top = true
popup_window = true
theme = ExtResource("3_np6te")
ok_button_text = "Có"
cancel_button_text = "Không"

[node name="AcceptDialog" type="AcceptDialog" parent="Popup"]
title = "Thông báo"
initial_position = 1
size = Vector2i(320, 160)
always_on_top = true
popup_window = true
min_size = Vector2i(200, 70)
theme = ExtResource("3_np6te")

[node name="FileDialog" type="FileDialog" parent="Popup"]
title = "Open a File"
initial_position = 1
size = Vector2i(720, 480)
always_on_top = true
theme = ExtResource("3_np6te")
ok_button_text = "Open"
cancel_button_text = "Hủy"
file_mode = 0
access = 2
filters = PackedStringArray(".xlsx; Excel files")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BufferTop" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BufferLeft" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="SuaButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("4_kxf73")
disabled = true
toggle_mode = true
text = "Sửa thông tin"
icon = ExtResource("5_r75hr")
alignment = 0
expand_icon = true

[node name="LuuButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_kxf73")
text = "Lưu thông tin"
icon = ExtResource("6_0yvow")
alignment = 0
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buffer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="TruongThongTin" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 4
alignment = 1

[node name="Buffer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="MaChuHo" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Mã Chủ Hộ*"
flat = true
alignment = 0

[node name="SoNha" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Số Nhà"
flat = true
alignment = 0

[node name="DuongPho" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Đường Phố*"
flat = true
alignment = 0

[node name="ThiTran" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Thị Trấn*"
flat = true
alignment = 0

[node name="QuanHuyen" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Quận Huyện*"
flat = true
alignment = 0

[node name="TinhThanh" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Tỉnh Thành*"
flat = true
alignment = 0

[node name="GhiChu" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Ghi Chú"
flat = true
alignment = 0

[node name="Buffer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="SuaThongTinHoKhau" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = 4

[node name="Buffer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="MaChuHo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau"]
layout_mode = 2

[node name="SuaMaChuHo" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau/MaChuHo"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_s7w6w")
placeholder_text = "Mã Chủ Hộ"
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="SuaChonMaChuHo" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau/MaChuHo"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("10_5vvv7")
disabled = true

[node name="SoNha" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")
placeholder_text = "Số Nhà"
editable = false

[node name="DuongPho" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")
placeholder_text = "Đường Phố"
editable = false

[node name="ThiTran" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")
placeholder_text = "Thị Trấn"
editable = false

[node name="QuanHuyen" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")
placeholder_text = "Quận Huyện"
editable = false

[node name="TinhThanh" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")
placeholder_text = "Tỉnh Thành"
editable = false

[node name="GhiChu" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")
placeholder_text = "Ghi Chú"
editable = false

[node name="Buffer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Buffer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="PanelContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="ThemButton" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("4_kxf73")
text = "Thêm thông tin"
icon = ExtResource("10_xyfva")
alignment = 0
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="Buffer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="TruongThongTin" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="Buffer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="MaChuHo" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Mã Chủ Hộ*"
flat = true
alignment = 0

[node name="SoNha" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Số Nhà"
flat = true
alignment = 0

[node name="DuongPho" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Đường Phố*"
flat = true
alignment = 0

[node name="ThiTran" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Thị Trấn*"
flat = true
alignment = 0

[node name="QuanHuyen" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Quận Huyện*"
flat = true
alignment = 0

[node name="TinhThanh" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Tỉnh Thành*"
flat = true
alignment = 0

[node name="GhiChu" type="Button" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_mq46t")
disabled = true
text = "Ghi Chú"
flat = true
alignment = 0

[node name="Buffer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/TruongThongTin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="DienThongTinHoKhau" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = 4

[node name="Buffer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="MaChuHo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau"]
layout_mode = 2

[node name="ThemMaChuHo" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau/MaChuHo"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_s7w6w")
caret_blink = true
caret_blink_interval = 0.5

[node name="ThemChonMaChuHo" type="OptionButton" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau/MaChuHo"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("10_5vvv7")
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="SoNha" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")

[node name="DuongPho" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")

[node name="ThiTran" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")

[node name="QuanHuyen" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")

[node name="TinhThanh" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")

[node name="GhiChu" type="LineEdit" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau"]
layout_mode = 2
theme = ExtResource("8_s7w6w")

[node name="Buffer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Buffer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="BufferRight" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="BufferBottom" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="Table" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="BufferTop" type="PanelContainer" parent="Table"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="Table"]
layout_mode = 2

[node name="Buffer" type="PanelContainer" parent="Table/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="TableButtons" type="HBoxContainer" parent="Table/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Table/HBoxContainer2/TableButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
theme_override_constants/separation = 0

[node name="LamMoiButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = ExtResource("4_kxf73")
theme_override_styles/normal = SubResource("StyleBoxFlat_onryy")
theme_override_styles/hover = SubResource("StyleBoxFlat_b4gmp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ojekh")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jvkkl")
icon = ExtResource("11_ogsmo")

[node name="PanelContainer" type="PanelContainer" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.01
theme_override_styles/panel = SubResource("StyleBoxFlat_hoijd")

[node name="MoTepButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
focus_mode = 0
theme = ExtResource("4_kxf73")
text = "Mở tệp excel"
icon = ExtResource("12_li6jy")
alignment = 0
expand_icon = true

[node name="DuongDanTep" type="LineEdit" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
focus_mode = 0
theme = ExtResource("8_s7w6w")
theme_override_styles/normal = SubResource("StyleBoxFlat_qxmw4")
placeholder_text = "   Chưa có tệp nào được chọn"
structured_text_bidi_override = 2

[node name="TaiLenButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
focus_mode = 0
theme = ExtResource("4_kxf73")
text = "Tải lên"
icon = ExtResource("13_dnav0")
alignment = 0
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="Table/HBoxContainer2/TableButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 19.0

[node name="XoaButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
focus_mode = 0
theme = ExtResource("4_kxf73")
text = "Xóa"
icon = ExtResource("14_mldby")
alignment = 0
expand_icon = true

[node name="XoaHetButton" type="Button" parent="Table/HBoxContainer2/TableButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
focus_mode = 0
theme = ExtResource("4_kxf73")
text = "Xóa Hết"
icon = ExtResource("15_og115")
alignment = 0
expand_icon = true

[node name="SubmenuTable" type="Button" parent="Table/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = ExtResource("4_kxf73")
theme_override_styles/normal = SubResource("StyleBoxFlat_r0rjq")
theme_override_styles/hover = SubResource("StyleBoxFlat_p88x3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8x1sh")
theme_override_styles/disabled = SubResource("StyleBoxFlat_h7pnl")
icon = ExtResource("16_ntd16")
icon_alignment = 1

[node name="Buffer2" type="PanelContainer" parent="Table/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="HBoxContainer" type="HBoxContainer" parent="Table"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="BufferLeft" type="PanelContainer" parent="Table/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="DanhSachHoKhau" parent="Table/HBoxContainer" instance=ExtResource("1_aq4hh")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
theme = ExtResource("18_sv5ni")

[node name="BufferRight" type="PanelContainer" parent="Table/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="BufferBottom" type="PanelContainer" parent="Table"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[connection signal="confirmed" from="Popup/ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="file_selected" from="Popup/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/SuaButton" to="." method="_on_sua_button_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/LuuButton" to="." method="_on_luu_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau/MaChuHo/SuaMaChuHo" to="." method="_on_sua_ma_chu_ho_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/HBoxContainer/SuaThongTinHoKhau/MaChuHo/SuaChonMaChuHo" to="." method="_on_sua_chon_ma_chu_ho_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PanelContainer/ThemButton" to="." method="_on_them_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau/MaChuHo/ThemMaChuHo" to="." method="_on_them_ma_chu_ho_text_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/PanelContainer/ScrollContainer/HBoxContainer/DienThongTinHoKhau/MaChuHo/ThemChonMaChuHo" to="." method="_on_them_chon_ma_chu_ho_item_selected"]
[connection signal="pressed" from="Table/HBoxContainer2/TableButtons/HBoxContainer2/LamMoiButton" to="." method="_on_lam_moi_button_pressed"]
[connection signal="pressed" from="Table/HBoxContainer2/TableButtons/HBoxContainer2/MoTepButton" to="." method="_on_mo_tep_button_pressed"]
[connection signal="pressed" from="Table/HBoxContainer2/TableButtons/HBoxContainer2/TaiLenButton" to="." method="_on_tai_len_button_pressed"]
[connection signal="pressed" from="Table/HBoxContainer2/TableButtons/HBoxContainer/XoaButton" to="." method="_on_xoa_button_pressed"]
[connection signal="pressed" from="Table/HBoxContainer2/TableButtons/HBoxContainer/XoaHetButton" to="." method="_on_xoa_het_button_pressed"]
[connection signal="pressed" from="Table/HBoxContainer2/SubmenuTable" to="." method="_on_submenu_table_pressed"]
